"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-07-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-02:
	  hacprsim: on startup, set !Vdd and !GND as initial events 
		in the event queue, so their fanout gets processed.


2012-07-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-01:
	  hacprsim: added options to model dynamic power/ground supplies
		by adding terms to the production rules (ExprAlloc).
		TODO: properly handle internal nodes' supplies.


2012-06-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-40:
	 vpi-prsim: force transport delays from prsim to vcs to be zero,
		instead of calculating a time difference (floating-point sub.)
		This works around a rare issue where the floating-point 
		time subtraction results in a garbage value.  


2012-06-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-39:
	  hacprsim: added time-fmt command to control formatting and
		precision of time values in output.


2012-06-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-38:
	  prsim/State-prsim.cc: event on event queue exception, 
		keep event queue free-list coherent for cleaner exiting.
	  vpi-prsim.cc: on exception thrown, call _vpi_finish().


2012-05-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-37:
	  hacknet: added 'emit_port_summary' option to print port
		direction information in comment block.


2012-05-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-36:
	  HAC: Object/lang/PRS_rule_attribute.h: new 'res' rule attribute
		to flag that a rule is a fake resistor.


2012-05-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-35: