@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2012-07-05	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-03:
+	  hacprsim: dynamic power supplies now properly use the 
+		supply associated with each defined internal node.
+
+
 2012-07-04	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-85-40-prsim-power-supply-02:
